z-index fix

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -23,7 +23,7 @@ p {
   position: relative;
   max-width: 420px;
   margin: 96px auto;
-  z-index: 1;
+  z-index: 2;
 
   @media only screen and (max-width: 500px) {
     margin: auto;
